# integrated-cpp-trainer-python-interfrence

./: CMakeLists.txt  README.md  cpp_trainer.cpp  setup.sh
